// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`support Enterprise 1`] = `
.c8 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
}

.c5 {
  box-sizing: border-box;
}

.c11 {
  box-sizing: border-box;
  margin-bottom: 72px;
  margin-top: 24px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid;
  border-radius: 8px;
  border-color: #222C59;
}

.c3 {
  box-sizing: border-box;
  padding-bottom: 40px;
  padding-top: 4px;
  padding-left: 32px;
  padding-right: 32px;
  background-color: #222C59;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 18px;
  margin: 0px;
  padding-right: 8px;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  margin: 0px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 24px;
  font-weight: 600;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 16px;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 16px;
  margin-top: 24px;
  padding-bottom: 8px;
  width: 210px;
  border-bottom: 1px solid;
  border-color: #111B48;
  display: flex;
  align-items: center;
}

.c13 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  flex-shrink: 0;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c10 {
  display: block;
  color: #FFFFFF;
  border-radius: 4px;
  text-decoration: none;
  margin-bottom: 8px;
  padding: 4px 8px;
  transition: all 0.3s;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
}

.c10:hover,
.c10:focus {
  background: #2C3A73;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Help & Support
    </div>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
          width="210"
        >
          <div
            class="c7"
            font-size="18"
          >
            <span
              class="c8 icon icon-local_play "
              color="light"
            />
          </div>
          <h5
            class="c9"
          >
            Support
          </h5>
        </div>
        <a
          class="c10"
          href="https://gravitational.zendesk.com/hc/en-us/requests/new"
        >
          Create a Support Ticket
        </a>
        <a
          class="c10"
          href="https://community.gravitational.com/"
        >
          Ask the Community Questions
        </a>
        <a
          class="c10"
          href="https://github.com/gravitational/teleport/issues/new/choose"
        >
          Request a New Feature
        </a>
        <a
          class="c10"
          href="mailto:teleport-feedback@gravitational.com"
        >
          Send Product Feedback
        </a>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
          width="210"
        >
          <div
            class="c7"
            font-size="18"
          >
            <span
              class="c8 icon icon-list3 "
              color="light"
            />
          </div>
          <h5
            class="c9"
          >
            Resources
          </h5>
        </div>
        <a
          class="c10"
          href="https://gravitational.com/teleport/docs/quickstart?utm_source=teleport&utm_medium=e_5.0.0"
        >
          Quickstart Guide
        </a>
        <a
          class="c10"
          href="https://gravitational.com/teleport/docs/user-manual?utm_source=teleport&utm_medium=e_5.0.0"
        >
          tsh User Guide
        </a>
        <a
          class="c10"
          href="https://gravitational.com/teleport/docs/admin-guide?utm_source=teleport&utm_medium=e_5.0.0"
        >
          Admin Guide
        </a>
        <a
          class="c10"
          href="https://dashboard.gravitational.com/web/downloads "
        >
          Download Page
        </a>
        <a
          class="c10"
          href="https://gravitational.com/teleport/docs/faq?utm_source=teleport&utm_medium=e_5.0.0"
        >
          FAQ
        </a>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
          width="210"
        >
          <div
            class="c7"
            font-size="18"
          >
            <span
              class="c8 icon icon-graph "
              color="light"
            />
          </div>
          <h5
            class="c9"
          >
            Troubleshooting
          </h5>
        </div>
        <a
          class="c10"
          href="https://gravitational.com/teleport/docs/admin-guide?utm_source=teleport&utm_medium=e_5.0.0#troubleshooting"
        >
          Monitoring Teleport
        </a>
        <a
          class="c10"
          href="https://gravitational.com/teleport/docs/admin-guide?utm_source=teleport&utm_medium=e_5.0.0#troubleshooting"
        >
          Collecting Debug Data
        </a>
        <a
          class="c10"
          href="https://gravitational.com/teleport/docs/admin-guide?utm_source=teleport&utm_medium=e_5.0.0#troubleshooting"
        >
          Troubleshooting FAQ
        </a>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
          width="210"
        >
          <div
            class="c7"
            font-size="18"
          >
            <span
              class="c8 icon icon-notifications_active "
              color="light"
            />
          </div>
          <h5
            class="c9"
          >
            Updates
          </h5>
        </div>
        <a
          class="c10"
          href="https://github.com/gravitational/teleport/blob/master/CHANGELOG.md"
        >
          Product Changelog
        </a>
        <a
          class="c10"
          href="https://gravitational.com/blog/"
        >
          Gravitational Blog
        </a>
      </div>
    </div>
  </div>
  <div
    class="c11"
  >
    <h5
      class="c12"
      font-weight="bold"
    >
      Cluster Information
    </h5>
    <div
      class="c13"
    >
      <div
        class="c14"
      >
        Cluster Name
        :
      </div>
      <div
        class="c15"
      >
        test cluster name
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14"
      >
        Teleport Version
        :
      </div>
      <div
        class="c15"
      >
        5.0.0
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14"
      >
        Public Address
        :
      </div>
      <div
        class="c15"
      >
        test/public/url
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14"
      >
        Connected Nodes
        :
      </div>
      <div
        class="c15"
      >
        50
      </div>
    </div>
  </div>
</div>
`;

exports[`support OSS 1`] = `
.c8 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
}

.c5 {
  box-sizing: border-box;
}

.c11 {
  box-sizing: border-box;
  margin-bottom: 72px;
  margin-top: 24px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid;
  border-radius: 8px;
  border-color: #222C59;
}

.c3 {
  box-sizing: border-box;
  padding-bottom: 40px;
  padding-top: 4px;
  padding-left: 32px;
  padding-right: 32px;
  background-color: #222C59;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 18px;
  margin: 0px;
  padding-right: 8px;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  margin: 0px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 24px;
  font-weight: 600;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 16px;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 16px;
  margin-top: 24px;
  padding-bottom: 8px;
  width: 210px;
  border-bottom: 1px solid;
  border-color: #111B48;
  display: flex;
  align-items: center;
}

.c13 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  flex-shrink: 0;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c10 {
  display: block;
  color: #FFFFFF;
  border-radius: 4px;
  text-decoration: none;
  margin-bottom: 8px;
  padding: 4px 8px;
  transition: all 0.3s;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
}

.c10:hover,
.c10:focus {
  background: #2C3A73;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Help & Support
    </div>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
          width="210"
        >
          <div
            class="c7"
            font-size="18"
          >
            <span
              class="c8 icon icon-local_play "
              color="light"
            />
          </div>
          <h5
            class="c9"
          >
            Support
          </h5>
        </div>
        <a
          class="c10"
          href="https://community.gravitational.com/"
        >
          Ask the Community Questions
        </a>
        <a
          class="c10"
          href="https://github.com/gravitational/teleport/issues/new/choose"
        >
          Request a New Feature
        </a>
        <a
          class="c10"
          href="mailto:teleport-feedback@gravitational.com"
        >
          Send Product Feedback
        </a>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
          width="210"
        >
          <div
            class="c7"
            font-size="18"
          >
            <span
              class="c8 icon icon-list3 "
              color="light"
            />
          </div>
          <h5
            class="c9"
          >
            Resources
          </h5>
        </div>
        <a
          class="c10"
          href="https://gravitational.com/teleport/docs/quickstart?utm_source=teleport&utm_medium=oss_5.0.0"
        >
          Quickstart Guide
        </a>
        <a
          class="c10"
          href="https://gravitational.com/teleport/docs/user-manual?utm_source=teleport&utm_medium=oss_5.0.0"
        >
          tsh User Guide
        </a>
        <a
          class="c10"
          href="https://gravitational.com/teleport/docs/admin-guide?utm_source=teleport&utm_medium=oss_5.0.0"
        >
          Admin Guide
        </a>
        <a
          class="c10"
          href="https://gravitational.com/teleport/download"
        >
          Download Page
        </a>
        <a
          class="c10"
          href="https://gravitational.com/teleport/docs/faq?utm_source=teleport&utm_medium=oss_5.0.0"
        >
          FAQ
        </a>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
          width="210"
        >
          <div
            class="c7"
            font-size="18"
          >
            <span
              class="c8 icon icon-graph "
              color="light"
            />
          </div>
          <h5
            class="c9"
          >
            Troubleshooting
          </h5>
        </div>
        <a
          class="c10"
          href="https://gravitational.com/teleport/docs/admin-guide?utm_source=teleport&utm_medium=oss_5.0.0#troubleshooting"
        >
          Monitoring Teleport
        </a>
        <a
          class="c10"
          href="https://gravitational.com/teleport/docs/admin-guide?utm_source=teleport&utm_medium=oss_5.0.0#troubleshooting"
        >
          Collecting Debug Data
        </a>
        <a
          class="c10"
          href="https://gravitational.com/teleport/docs/admin-guide?utm_source=teleport&utm_medium=oss_5.0.0#troubleshooting"
        >
          Troubleshooting FAQ
        </a>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
          width="210"
        >
          <div
            class="c7"
            font-size="18"
          >
            <span
              class="c8 icon icon-notifications_active "
              color="light"
            />
          </div>
          <h5
            class="c9"
          >
            Updates
          </h5>
        </div>
        <a
          class="c10"
          href="https://github.com/gravitational/teleport/blob/master/CHANGELOG.md"
        >
          Product Changelog
        </a>
        <a
          class="c10"
          href="https://gravitational.com/blog/"
        >
          Gravitational Blog
        </a>
      </div>
    </div>
  </div>
  <div
    class="c11"
  >
    <h5
      class="c12"
      font-weight="bold"
    >
      Cluster Information
    </h5>
    <div
      class="c13"
    >
      <div
        class="c14"
      >
        Cluster Name
        :
      </div>
      <div
        class="c15"
      >
        test cluster name
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14"
      >
        Teleport Version
        :
      </div>
      <div
        class="c15"
      >
        5.0.0
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14"
      >
        Public Address
        :
      </div>
      <div
        class="c15"
      >
        test/public/url
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14"
      >
        Connected Nodes
        :
      </div>
      <div
        class="c15"
      >
        50
      </div>
    </div>
  </div>
</div>
`;
